# razor_imu

./: CMakeLists.txt  install_razor_imu_serial.sh  razor_imu_serialConfig.cmake.in  readme.md
src/: test.cpp
src/razor_imu/: razor_imu_serial.cpp  razor_imu_serial.hpp
utils/: install_depends.sh  install_razor_imu_serial.sh  uninstall_razor_imu_serial.sh
